--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,29 @@
+/* inter font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+/* noto font */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+
+
+@layer components {
+    /*  {
+        border: 1px solid red;
+    } */
+
+    .inter {
+        font-family: "Inter", sans-serif;
+    }
+
+    .noto,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: "Noto Serif", serif;
+    }
+}
