--- a/src/input.css
+++ b/src/input.css
@@ -19,9 +19,9 @@
    BASE LAYER
 ====================== */
 @layer base {
-    *{
+    /* *{
         border: 1px solid black;
-    }
+    } */
     body {
         font-size: 14px;
         font-family: "Inter", sans-serif;
